--- a/src/app/carnet/pages/crear/crear.component.html
+++ b/src/app/carnet/pages/crear/crear.component.html
@@ -58,11 +58,26 @@
         <mat-error *ngIf="secondFormGroup.get('cedule')?.hasError('maxlength')">
          Cédula no debe exceder los 8 caracteres
         </mat-error>
+        <mat-error *ngIf="secondFormGroup.get('cedule')?.hasError('invalidNumber')">
+         Cédula debe ser númerico
+        </mat-error>
 
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Extensión</mat-label>
         <input matInput formControlName="extent" required>
+         <mat-error *ngIf="secondFormGroup.get('extent')?.hasError('minlength')">
+          Extensión debe tener al menos 4 números
+        </mat-error>
+
+        <mat-error *ngIf="secondFormGroup.get('extent')?.hasError('maxlength')">
+         Extensión no debe exceder los 4 números
+        </mat-error>
+
+        <mat-error *ngIf="secondFormGroup.get('extent')?.hasError('invalidNumber')">
+         Extensión debe ser númerico
+        </mat-error>
+
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Dirección</mat-label>
@@ -75,6 +90,12 @@
       <mat-form-field appearance="fill">
         <mat-label>Teléfono</mat-label>
         <input matInput formControlName="cellpone" required>
+        <mat-error *ngIf="secondFormGroup.get('cellpone')?.hasError('invalidNumber')">
+         Teléfono debe ser númerico
+        </mat-error>
+        <mat-error *ngIf="secondFormGroup.get('cellpone')?.hasError('minlength')">
+          Teléfono debe tener al menos 10 caracteres
+        </mat-error>
       </mat-form-field>
       <!--<div>
         <button mat-button matStepperPrevious>Back</button>
@@ -237,7 +258,9 @@
 
       <div>
         <!--<button mat-button matStepperPrevious>Back</button>-->
-        <button mat-button type="submit" (click)="onSubmit()">Crear</button>
+         <mat-card-actions class="action-container">
+        <button mat-raised-button type="submit" color="primary" (click)="onSubmit()">Crear</button>
+        </mat-card-actions>
       </div>
        </mat-card>
     </form>
