--- a/src/app/carnet/pages/navigation/navigation.component.html
+++ b/src/app/carnet/pages/navigation/navigation.component.html
@@ -8,7 +8,7 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/carnet', 'crear']" >Crear</a>
       <a mat-list-item [routerLink]="['/carnet', 'buscar']">Buscar</a>
-      <!--<a mat-list-item href="#">Secciones</a>-->
+      <a mat-list-item href="#">Generar</a>
       <a mat-list-item (click)="logout()">Salir</a>
     </mat-nav-list>
   </mat-sidenav>
