--- a/src/app/carnet/component/search/search.component.css
+++ b/src/app/carnet/component/search/search.component.css
@@ -1,9 +1,29 @@
+.upload-container {
+  border: 2px dashed #cccccc;
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.upload-container p {
+  margin: 0;
+}
+
+
+.mat-stepper-horizontal {
+  margin-top: 8px;
+}
+
+.mat-mdc-form-field {
+  margin-top: 16px;
+}
+
+
 .login-form {
   top: 10px;
   max-width: 500px; /* Establece un ancho máximo para el contenedor */
   margin: 0 auto; /* Centra el contenedor horizontalmente */
-  padding: 10%; /* Agrega un poco de espacio alrededor del contenedor */
-  text-align: center;
+  padding: 20px; /* Agrega un poco de espacio alrededor del contenedor */
 }
 
  
@@ -16,6 +36,7 @@
 }
 
 .action-container {
+  padding:40px;
   display: flex;
   justify-content: center;
 }
