--- a/src/app/carnet/pages/crear/crear.component.css
+++ b/src/app/carnet/pages/crear/crear.component.css
@@ -39,3 +39,11 @@
   display: flex;
   justify-content: center;
 }
+
+
+.carnet-preview {
+  width: 150px; /* Ajusta el tamaño según sea necesario */
+  height: auto;
+  border: 1px solid #ccc; /* Opcional: agrega un borde para hacer la imagen más visible */
+  border-radius: 5px; /* Opcional: agrega esquinas redondeadas */
+}
