--- a/src/app/carnet/pages/navigation/navigation.component.html
+++ b/src/app/carnet/pages/navigation/navigation.component.html
@@ -6,6 +6,7 @@
       [opened]="(isHandset$ | async) === false">
      
     <mat-nav-list>
+      <a mat-list-item [routerLink]="['/carnet', 'list']" >carnets</a>
       <a mat-list-item [routerLink]="['/carnet', 'crear']" >Crear</a>
       <a mat-list-item [routerLink]="['/carnet', 'buscar']">Buscar</a>
       <a mat-list-item href="#">Generar</a>
