--- a/src/app/carnet/pages/crear/crear.component.html
+++ b/src/app/carnet/pages/crear/crear.component.html
@@ -6,7 +6,9 @@
   </div>
 </div>-->
 
-<mat-horizontal-stepper [linear]="isLinear" #stepper>
+
+<div class="login-form">
+ <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
   <div class="login-form">
  
@@ -284,3 +286,7 @@
 </div>
   </mat-step>
 </mat-horizontal-stepper>
+
+</div>
+
+
