--- a/src/app/carnet/pages/navigation/navigation.component.css
+++ b/src/app/carnet/pages/navigation/navigation.component.css
@@ -38,4 +38,7 @@
     height: 100%;
     z-index: -1; /* Coloca la imagen detrás del contenido principal */
     /* Ajusta el fondo como desees, por ejemplo: */
+    background-image: url('../../../../assets/fondo.jpeg');
+    background-size: cover; /* Ajusta el tamaño de la imagen para que cubra todo el contenedor */
+    opacity: 0.8; /* Ajusta la opacidad de la imagen si lo deseas */
     }
