--- a/src/app/carnet/component/card/card.component.html
+++ b/src/app/carnet/component/card/card.component.html
@@ -32,6 +32,7 @@
    <mat-card-subtitle>Departamento: {{carnet.department?.name}}</mat-card-subtitle>
 <mat-card-subtitle>Cargo: {{carnet.charge?.name}}</mat-card-subtitle>
 <mat-card-subtitle>Acceso: {{carnet.access_levels?.name}}</mat-card-subtitle>
+<mat-card-subtitle>Código: {{carnet.card_code}}</mat-card-subtitle>
 </mat-card-content>
 </mat-tab>
   <mat-tab label="Carnet"> 
@@ -39,6 +40,20 @@
 		    <img [src]="frente" alt="Carnet" class="carnet-preview">
 		    <img [src]="atras" alt="Carnet" class="carnet-preview">
 		  </div>
+
+
+  <mat-card-actions class="action-container">
+      <button mat-raised-button type="submit" color="primary" (click)="download(carnet.cedule??'')" matTooltip="Descargar"><mat-icon>
+           download
+       </mat-icon> </button>
+          <button mat-raised-button type="submit" color="primary" (click)="delete(carnet.cedule??'')" matTooltip="Eliminar"><mat-icon>
+           delete
+       </mat-icon> </button>
+          <button mat-raised-button type="submit" color="primary" (click)="update(carnet.cedule??'')" matTooltip="Actualizar"><mat-icon>
+           update
+       </mat-icon> </button>
+</mat-card-actions>
+       
 </mat-tab>
 
 </mat-tab-group>
