--- a/src/app/carnet/pages/update/update.component.html
+++ b/src/app/carnet/pages/update/update.component.html
@@ -26,10 +26,7 @@
         <mat-label>Apellido</mat-label>
         <input matInput formControlName="lastname" required>
       </mat-form-field>
-      <!--<mat-form-field appearance="fill">
-        <mat-label>Card Code</mat-label>
-        <input matInput formControlName="card_code" required>
-      </mat-form-field>-->
+
       <mat-form-field appearance="fill">
         <mat-label>Vencimiento</mat-label>
         <input matInput [matDatepicker]="expPicker" formControlName="expiration" required>
@@ -40,9 +37,7 @@
         <mat-label>Observación</mat-label>
         <textarea matInput formControlName="note"></textarea>
       </mat-form-field>
-     <!-- <div>
-        <button mat-button matStepperNext>Next</button>
-      </div>-->
+
       </mat-card>
     </form>
  </mat-card-content>
@@ -71,32 +66,13 @@
         </mat-error>
 
       </mat-form-field>
-      <!--
-      <mat-form-field appearance="fill">
-        <mat-label>Extensión</mat-label>
-        <input matInput formControlName="extent" required>
-         <mat-error *ngIf="secondFormGroup.get('extent')?.hasError('minlength')">
-          Extensión debe tener al menos 4 números
-        </mat-error>
 
-        <mat-error *ngIf="secondFormGroup.get('extent')?.hasError('maxlength')">
-         Extensión no debe exceder los 4 números
-        </mat-error>
-
-        <mat-error *ngIf="secondFormGroup.get('extent')?.hasError('invalidNumber')">
-         Extensión debe ser númerico
-        </mat-error>
-
-      </mat-form-field>-->
 
       <mat-form-field appearance="fill">
         <mat-label>Dirección</mat-label>
         <textarea matInput formControlName="address" required></textarea>
       </mat-form-field>
-      <!--<mat-form-field appearance="fill">
-        <mat-label>Teléfono</mat-label>
-        <input matInput formControlName="phone" required>
-      </mat-form-field>-->
+
       <mat-form-field appearance="fill">
         <mat-label>Teléfono</mat-label>
         <input matInput formControlName="cellpone" required>
@@ -122,10 +98,7 @@
           Código debe ser númerico
         </mat-error>
       </mat-form-field>
-      <!--<div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>-->
+
       
       </mat-card>
     </form>
@@ -143,9 +116,9 @@
       
 
       <mat-form-field appearance="fill">
-        <mat-label>Departamento</mat-label>
+        <mat-label>Departamento: {{ carnet?.department?.name}}</mat-label>
         <mat-select formControlName="department" (selectionChange)="onDepartmentSelection($event)"
-          panelClass="panelResponsive">
+          panelClass="panelResponsive" required>
           <mat-option *ngFor="let department of filteredDepartment" [value]="department.id">
             <span>{{department.name}}
             </span>
@@ -154,23 +127,10 @@
       </mat-form-field>
 
 
-     <!-- <mat-form-field appearance="fill">
-        <mat-label>Departamento</mat-label>
-   
-        <mat-select formControlName="department" required>
-            @for (depart of department; track depart.id) {
-                <mat-option value="{{ depart.id }}">{{ depart.name }}</mat-option>
-            } @empty {
-                <mat-option>There are no items.</mat-option>
-            }          
-        </mat-select>
-         
-      </mat-form-field>-->
-
 
       <mat-form-field appearance="fill">
-        <mat-label>Cargo</mat-label>
-        <!--<input matInput formControlName="charge" required>-->
+        <mat-label>Cargo: {{ carnet?.charge?.name}}</mat-label>
+        <!--<input matInput formControlName="charge" >-->
         <mat-select formControlName="charge" required>
             @for (cargo of charge; track cargo.id) {
                 <mat-option value="{{ cargo.id }}">{{ cargo.name }}</mat-option>
@@ -179,26 +139,10 @@
             }          
         </mat-select>
       </mat-form-field>
-      <!--<mat-form-field appearance="fill">
-        <mat-label>Type Creations</mat-label>
-        <input matInput formControlName="type_creations" required>
-      </mat-form-field>-->
-
-      <!--
-      <mat-form-field appearance="fill">
-        <mat-label>Contextura</mat-label>
-        <mat-select formControlName="textures" required>
-            @for (tex of texture; track tex.id) {
-                <mat-option value="{{ tex.id }}">{{ tex.name }}</mat-option>
-            } @empty {
-                <mat-option>There are no items.</mat-option>
-            }          
-        </mat-select>
-      </mat-form-field>-->
 
 
       <mat-form-field appearance="fill">
-        <mat-label>Nivel de Acceso</mat-label>
+        <mat-label>Nivel de Acceso: {{ carnet?.access_levels?.name}}</mat-label>
         <mat-select formControlName="access_levels" required>
             @for (piso of access; track piso.id) {
                 <mat-option value="{{ piso.id }}">{{ piso.name }}</mat-option>
@@ -206,33 +150,8 @@
                 <mat-option>There are no items.</mat-option>
             }          
         </mat-select>
-        <!--<input matInput formControlName="access_levels" required>-->
+        <!--<input matInput formControlName="access_levels" >-->
       </mat-form-field>
-
-<!--
-      <mat-form-field appearance="fill">
-        <mat-label>Sexo</mat-label>
-        <mat-select formControlName="genders" required>
-            @for (gender of genders; track gender.id) {
-                <mat-option value="{{ gender.id }}">{{ gender.name }}</mat-option>
-            } @empty {
-                <mat-option>There are no items.</mat-option>
-            }          
-        </mat-select>
-      </mat-form-field>
-
-
-        <mat-form-field appearance="fill">
-        <mat-label>Color de Cabello</mat-label>
-        <mat-select formControlName="hair_colors">
-            @for (h of hair; track h.id) {
-                <mat-option value="{{ h.id }}">{{ h.name }}</mat-option>
-            } @empty {
-                <mat-option>There are no items.</mat-option>
-            }          
-        </mat-select>
-      </mat-form-field>
-    -->
 
  </mat-card>
     </form>
@@ -250,20 +169,9 @@
       <ng-template matStepLabel>Step 4</ng-template>
       <mat-card>
      
-     <!--
+
       <mat-form-field appearance="fill">
-        <mat-label>Color de piel</mat-label>
-        <mat-select formControlName="skin_colors">
-            @for (s of skin; track s.id) {
-                <mat-option value="{{ s.id }}">{{ s.name }}</mat-option>
-            } @empty {
-                <mat-option>There are no items.</mat-option>
-            }          
-        </mat-select>
-      </mat-form-field>
-      -->
-      <mat-form-field appearance="fill">
-        <mat-label>Estado</mat-label>
+        <mat-label>Estado: {{ carnet?.state?.name}}</mat-label>
         <mat-select formControlName="state" required>
             @for (state of states; track state.id) {
                 <mat-option value="{{ state.id }}">{{ state.name }}</mat-option>
@@ -280,21 +188,8 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Parroquia</mat-label>
-        <input matInput formControlName="parishes">
+        <input matInput formControlName="parishes" required>
       </mat-form-field>
-    
-     <!--
-       <mat-form-field appearance="fill">
-        <mat-label>Estado Civil</mat-label>
-        <mat-select formControlName="civil_statuses" required>
-            @for (c of civil; track c.id) {
-                <mat-option value="{{ c.id }}">{{ c.name }}</mat-option>
-            } @empty {
-                <mat-option>There are no items.</mat-option>
-            }          
-        </mat-select>
-      </mat-form-field>
-    -->
 
        <div class="upload-container"
              (drop)="onDrop($event)"
