--- a/src/app/carnet/pages/update/update.component.html
+++ b/src/app/carnet/pages/update/update.component.html
@@ -182,14 +182,14 @@
       </mat-form-field>
 
 
-      <mat-form-field appearance="fill">
+     <!-- <mat-form-field appearance="fill">
         <mat-label>Municipio</mat-label>
         <input matInput formControlName="municipalities" required>
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Parroquia</mat-label>
         <input matInput formControlName="parishes" required>
-      </mat-form-field>
+      </mat-form-field>-->
 
        <div class="upload-container"
              (drop)="onDrop($event)"
